# vscode-cmake-tools-testdata

./: LICENSE.rst  Readme.md
testdata-01-simple/: CMakeLists.txt
testdata-01-simple/some_unit/: some_unit.c  some_unit.h
testdata-01/some_unit/: CMakeLists.txt  some_unit_test.c
testdata-02/: CMakeLists.txt
testdata-02-gtest/: app.cpp
testdata-02-gtest/some_unit/: CMakeLists.txt  some_unit.hpp  some_unit_test.cpp
testdata-02/some_unit/: some_unit.cpp
testdata-03-catch2/: CMakeLists.txt
testdata-03-catch2/some_unit/: CMakeLists.txt  some_unit_test.cpp
